--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -32,6 +32,14 @@
 					>
 				</li>
 			</ng-container>
+			<li class="nav-item">
+				<a
+					class="nav-link"
+					routerLink="/errors"
+					routerLinkActive="active"
+					>Errors</a
+				>
+			</li>
 		</ul>
 		<div
 			class="dropdown"
@@ -69,7 +77,7 @@
 				type="password"
 				placeholder="Password"
 			/>
-			<button class="btn btn-outline-success" type="submit">Login</button>
+			<button class="btn btn-success" type="submit">Login</button>
 		</form>
 	</div>
 </nav>
