--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -46,6 +46,7 @@
 			dropdown
 			*ngIf="accountService.currentUser$ | async as user"
 		>
+			<img src="{{ user.photoUrl }}" alt="{{ user.username }}" />
 			<a dropdownToggle class="dropdown-toggle text-light"
 				>Welcome {{ user.username | titlecase }}</a
 			>
