--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -104,7 +104,7 @@
 				</form>
 			</tab>
 			<tab heading="Edit Photos">
-				<p>Photo Edit Will go here</p>
+				<app-photo-editor [member]="member"></app-photo-editor>
 			</tab>
 		</tabset>
 	</div>
