--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,32 +1,66 @@
-<form #registerForm="ngForm" (submit)="register()" autocomplete="off">
+<form
+	[formGroup]="registerForm"
+	(submit)="registerForm.valid && register()"
+	autocomplete="off"
+>
 	<h2 class="text-center text-primary">Sign Up</h2>
 	<hr />
-	<div class="form-group">
-		<label for="username">Username</label>
-		<input
-			type="text"
-			class="form-control"
-			id="username"
-			name="username"
-			[(ngModel)]="model.username"
-			required
-		/>
-	</div>
 	<div class="form-group mb-3">
-		<label for="password">Password</label>
-		<input
-			type="password"
-			class="form-control"
-			id="password"
-			name="password"
-			[(ngModel)]="model.password"
-			required
-		/>
+		<label class="control-label" style="margin-right: 10px">I am a: </label>
+		<label class="radio-inline me-3">
+			<input type="radio" value="male" formControlName="gender" />
+			Male
+		</label>
+		<label class="radio-inline">
+			<input type="radio" value="female" formControlName="gender" />
+			Female
+		</label>
 	</div>
+
+	<app-text-input
+		[formControl]="registerForm.controls['username']"
+		[label]="'Username'"
+	></app-text-input>
+	<app-text-input
+		[formControl]="registerForm.controls['knownAs']"
+		[label]="'Known As'"
+	></app-text-input>
+	<app-date-input
+		[formControl]="registerForm.controls['dateOfBirth']"
+		[label]="'Date of Birth'"
+		[maxDate]="maxDate"
+	></app-date-input>
+	<app-text-input
+		[formControl]="registerForm.controls['city']"
+		[label]="'City'"
+	></app-text-input>
+	<app-text-input
+		[formControl]="registerForm.controls['country']"
+		[label]="'Country'"
+	></app-text-input>
+	<app-text-input
+		[formControl]="registerForm.controls['password']"
+		[label]="'Password'"
+		[type]="'password'"
+	></app-text-input>
+	<app-text-input
+		[formControl]="registerForm.controls['confirmPassword']"
+		[label]="'Confirm Password'"
+		[type]="'password'"
+	></app-text-input>
 	<div class="form-group text-center">
-		<button class="btn btn-success me-2" type="submit">Submit</button>
+		<button
+			class="btn btn-success me-2"
+			[disabled]="!registerForm.valid"
+			type="submit"
+		>
+			Register
+		</button>
 		<button class="btn btn-danger" type="button" (click)="cancel()">
 			Cancel
 		</button>
 	</div>
 </form>
+
+<p>{{ registerForm.value | json }}</p>
+<p>{{ registerForm.status | json }}</p>
