--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -29,7 +29,7 @@
 	<div class="card-body p-1">
 		<h6 class="card-title text-center mb-1">
 			<i class="fa fa-user" aria-hidden="true"></i>
-			{{ member.knownAs }}
+			{{ member.knownAs }}, {{ member.age }}
 		</h6>
 		<p class="card-text text-muted text-center">
 			<i class="fa fa-map-marker" aria-hidden="true"></i>
