--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,104 @@
+<div class="text-center mt-3">
+	<h2>Your Matches - {{ pagination?.totalItems }} found!</h2>
+</div>
+
+<div class="container mt-3">
+	<form
+		#form="ngForm"
+		class="row row-cols-lg-auto g-3 align-items-center mb-3"
+		(ngSubmit)="loadMembers()"
+		autocomplete="off"
+	>
+		<div class="col-12 d-flex align-items-center">
+			<label>Age from: </label>
+			<input
+				class="form-control ms-2"
+				type="number"
+				style="width: 70px"
+				name="minAge"
+				[(ngModel)]="userParams.minAge"
+			/>
+		</div>
+		<div class="col-12 px-2 d-flex align-items-center">
+			<label>Age to: </label>
+			<input
+				class="form-control ms-2"
+				type="number"
+				style="width: 70px"
+				name="maxAge"
+				[(ngModel)]="userParams.maxAge"
+			/>
+		</div>
+
+		<div class="col-12 px-2 d-flex align-items-center">
+			<label>Show: </label>
+			<select
+				name="gender"
+				style="width: 130px"
+				[(ngModel)]="userParams.gender"
+				class="form-select ms-2"
+			>
+				<option
+					*ngFor="let gender of genderList"
+					[value]="gender.value"
+				>
+					{{ gender.display }}
+				</option>
+			</select>
+		</div>
+
+		<button class="btn btn-primary ms-1" type="submit">
+			Apply Filters
+		</button>
+		<button
+			(click)="resetFilters()"
+			class="btn btn-info ms-1"
+			type="button"
+		>
+			Reset Filters
+		</button>
+		<div class="btn-group float-end ms-5">
+			<button
+				class="btn btn-primary"
+				name="orderBy"
+				(click)="loadMembers()"
+				btnRadio="lastActive"
+				[(ngModel)]="userParams.orderBy"
+				type="button"
+			>
+				Last Active
+			</button>
+			<button
+				class="btn btn-primary"
+				name="orderBy"
+				(click)="loadMembers()"
+				btnRadio="created"
+				[(ngModel)]="userParams.orderBy"
+				type="button"
+			>
+				Newest Members
+			</button>
+		</div>
+	</form>
+</div>
+
 <div class="row">
-	<div *ngFor="let member of members$ | async" class="col-2">
+	<div *ngFor="let member of members" class="col-2">
 		<app-member-card [member]="member"></app-member-card>
 	</div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+	<pagination
+		[boundaryLinks]="true"
+		[totalItems]="pagination.totalItems"
+		[itemsPerPage]="pagination.itemsPerPage"
+		[(ngModel)]="pagination.currentPage"
+		(pageChanged)="pageChanged($event)"
+		previousText="&lsaquo;"
+		nextText="&rsaquo;"
+		firstText="&laquo;"
+		lastText="&raquo;"
+	>
+	</pagination>
 </div>
