--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,65 +1,63 @@
-<div *ngIf="member" class="row">
-	<div class="col-4">
-		<div class="card">
-			<img
-				src="{{ member.photoUrl || ' ./assets/user.png' }}"
-				alt="{{ member.knownAs }}"
-				class="card-img-top img-thumbnail"
-			/>
-
-			<div class="card-body">
-				<div>
-					<strong>Location</strong>
-					<p class="card-text">
-						{{ member.city }}, {{ member.country }}
-					</p>
-				</div>
-				<div>
-					<strong>Age</strong>
-					<p class="card-text">{{ member.age }}</p>
-				</div>
-				<div>
-					<strong>Last Active</strong>
-					<p class="card-text">{{ member.lastActive | timeago }}</p>
-				</div>
-				<div>
-					<strong>Member Since</strong>
-					<p class="card-text">
-						{{ member.create | date: 'MMM yyyy' }}
-					</p>
-				</div>
-			</div>
-			<div class="card-footer">
-				<div class="btn-group d-flex">
-					<button class="btn btn-primary">Like</button>
-					<button class="btn btn-success">Message</button>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="col-8">
-		<tabset class="member-tabset">
-			<tab heading="About {{ member.knownAs }}">
-				<h4>Description</h4>
-				<p>{{ member.introduction }}</p>
-				<h4>Looking For</h4>
-				<p>{{ member.lookingFor }}</p>
-			</tab>
-			<tab heading="Interests">
-				<h4>Interests</h4>
-				<p>{{ member.interests }}</p>
-			</tab>
-			<tab heading="Photos">
-				<ngx-gallery
-					[options]="galleryOptions"
-					[images]="galleryImages"
-					style="display: inline-block; margin: 20px"
-				></ngx-gallery>
-			</tab>
-			<tab heading="Messages">
-				<p>messages will go here</p>
-			</tab>
-		</tabset>
-	</div>
+<div class="row">
+  <div class="col-4">
+    <div class="card">
+      <img
+        alt="{{ member.knownAs }}"
+        class="card-img-top img-thumbnail"
+        src="{{ member.photoUrl || ' ./assets/user.png' }}"
+      />
+      <div class="card-body">
+        <div>
+          <strong>Location</strong>
+          <p class="card-text">
+            {{ member.city }}, {{ member.country }}
+          </p>
+        </div>
+        <div>
+          <strong>Age</strong>
+          <p class="card-text">{{ member.age }}</p>
+        </div>
+        <div>
+          <strong>Last Active</strong>
+          <p class="card-text">{{ member.lastActive | timeago }}</p>
+        </div>
+        <div>
+          <strong>Member Since</strong>
+          <p class="card-text">
+            {{ member.create | date: 'MMM yyyy' }}
+          </p>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="btn-group d-flex">
+          <button class="btn btn-primary">Like</button>
+          <button class="btn btn-success" (click)="selectTab(3)">Message</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <tabset #memberTabs class="member-tabset">
+      <tab (selectTab)="onTabActivated($event)" heading="About {{ member.knownAs }}">
+        <h4>Description</h4>
+        <p>{{ member.introduction }}</p>
+        <h4>Looking For</h4>
+        <p>{{ member.lookingFor }}</p>
+      </tab>
+      <tab (selectTab)="onTabActivated($event)" heading="Interests">
+        <h4>Interests</h4>
+        <p>{{ member.interests }}</p>
+      </tab>
+      <tab (selectTab)="onTabActivated($event)" heading="Photos">
+        <ngx-gallery
+          [images]="galleryImages"
+          [options]="galleryOptions"
+          style="display: inline-block; margin: 20px"
+        ></ngx-gallery>
+      </tab>
+      <tab (selectTab)="onTabActivated($event)" heading="Messages">
+        <app-member-messages [messages]="messages" [username]="member.userName"></app-member-messages>
+      </tab>
+    </tabset>
+  </div>
 </div>
