--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -31,6 +31,15 @@
 						>Messages</a
 					>
 				</li>
+        <li class="nav-item">
+          <a
+            *appHasRole="['Admin','Moderator']"
+            class="nav-link"
+            routerLink="/admin"
+            routerLinkActive="active"
+          >Admin</a
+          >
+        </li>
 			</ng-container>
 			<li class="nav-item">
 				<a
@@ -51,7 +60,7 @@
 				alt="{{ user.username }}"
 			/>
 			<a dropdownToggle class="dropdown-toggle text-light"
-				>Welcome {{ user.knownAs | titlecase }}</a
+				>Welcome {{ user.knownAs || user.username | titlecase }}</a
 			>
 			<div *dropdownMenu class="dropdown-menu mt-3">
 				<a routerLink="/member/edit" class="dropdown-item"
